--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,8 @@ body {
     align-items: center;
     box-sizing: border-box;
     color: #212121;
-    height: 100vh;
-    justify-content: center;
+    transition: $1 0.6s ease;
 }
-
 
 @keyframes gradientAnimation {
     0% { background-position: 0% 50%; }
@@ -270,8 +268,6 @@ button:hover {
     max-width: 1100px;
     width: 100%;
     text-align: center;
-    height: 100%;
-    margin: auto;
 }
 
 /* 按鈕選項區域設計 */
