--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     width: 85%;
     max-width: 600px;
-    margin-bottom: 40px;
+    margin-bottom: 40px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
     text-align: left;
     transition: $1 0.6s ease;
 }
@@ -105,6 +105,7 @@ body {
     background-color: #45a049;
     transform: scale(1.1);
 }
+
 
 /* 基本資料輸入區使用 Material Design 風格 */
 #basic-info-form {
@@ -268,6 +269,8 @@ button:hover {
     max-width: 1100px;
     width: 100%;
     text-align: center;
+    height: 100%;
+    margin: auto;
 }
 
 /* 按鈕選項區域設計 */
